--- a/public/app.scss
+++ b/public/app.scss
@@ -1,5 +1,3 @@
-
-
 .chart-panel {
   background-color: rgba(35, 17, 77, 0.8);
   border-color: rgba(0, 0, 0, 0);
@@ -14,29 +12,89 @@
   background: linear-gradient(to bottom right, #7749d5, #ff666e);
 }
 
-.siemens{
-    .font-white, .euiTitle{
-        color: #ffffff !important;
-    }
-}
-
-.author{
-    font-size: 1rem;
-    margin-left: 1rem;
-    font-weight: 400;
-}
-
-#reportable-event{
-  .title{
-    font-size: 1.2rem;
-      line-height: 2.5rem;
-      color: #b7b7b7 !important;
-      font-weight: 700;
+.siemens {
+  .font-white,
+  .euiTitle {
+    color: #ffffff !important;
   }
-  .event{
+}
+
+.author {
+  font-size: 1rem;
+  margin-left: 1rem;
+  font-weight: 400;
+}
+
+#reportable-event {
+  .title {
+    font-size: 1.2rem;
+    line-height: 2.5rem;
+    color: #b7b7b7 !important;
+    font-weight: 700;
+  }
+  .event {
     line-height: 1.5rem;
   }
-  .error-event{
+  .error-event {
     color: #ff666e !important;
+  }
+}
+
+.time-filter {
+  .range {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 15px;
+    width: 80%;
+  }
+
+  .DayPicker-Caption, .DayPicker-Weekday abbr, .DayPicker-Day{
+    color: rgba(255, 255, 255, 0.8);
+  }
+
+  #time-start,
+  #time-end {
+    color: rgba(255, 255, 255, 0);
+    display: none;
+  }
+
+  .btn {
+    color: #fff;
+    padding: 6px 15px;
+    font-weight: 500;
+    font-size: 1.1rem;
+    border-radius: 5px;
+    float: left;
+    transition: max-height 0.15s ease-out;
+  }
+
+  .btn-submit {
+    background-color: #ff7e53;
+  }
+
+  .btn-reset {
+    background-color: #4e6ffa;
+    margin-top: 12px;
+    margin-right: 10px;
+  }
+  .DayPicker:not(.DayPicker--interactionDisabled)
+    .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
+    position: relative;
+    background-color: #ff7e53;
+    color: #f0f8ff;
+  }
+
+  .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside):hover {
+    background-color: #ff7e53;
+  }
+
+  .Selectable
+    .DayPicker-Day--selected:not(.DayPicker-Day--start):not(.DayPicker-Day--end):not(.DayPicker-Day--outside) {
+    background-color: #ffe5dd !important;
+    color: #ff7e53;
   }
 }
